  chooser dialog box
- Marker saving can now be toggled in Utilities->Global Options->Loading
  and Saving
- View->Scrolling->Scroll to Caret (C+e C+j) now expands the fold
  containing the caret, if necessary
- -nostartupmacro command line switch
- Improved 'View Registers' dialog box
- The gutter now shows marker tooltips immediately

+ Neutral

- 'Append to Register' command renamed 'Copy Append to Register'
- 'Replace All' no longer bound to C+e C+a
- 'site-props' directory renamed to 'properties'
- 'Rectangular Selection' command removed. Now, the only way to create
  a rectangular selection is to either Control-drag and
  Control-Shift-click
- 'Box Comment' command removed (it might reappear later. I just can't
  be bothered updating it for the new selection code right now.)
- 'Wing Comment' renamed 'Range Comment', 'Block Comment' renamed 'Line
  Comment'
- Startup macro is now run before the first view is created (so the
  Swing font hack script floating around can now work without the
  view.splitVertically()/view.unsplit() hackery)

+ Bug Fixes

- print() should now work in BeanShell:
  - if invoked from Console plugin, prints output to console
  - otherwise, prints the specified string to the activity log, with log
    level 'warning' (so that it is also printed to the standard error
    stream)
- If a view was split and several buffers were visible, only one of them
  would be checked when the view gains focus for modification by another
  program
- The setting of the reverse search flag wasn't fully saved and restored
- The setting of the HyperSearch flag wasn't handled properly by the
  search bar
- Notepad macro threw an exception when its window was closed
- The 'Search in Current Buffer' and 'Search in Directory' macros didn't
  work
- If the caret was at the beginning of the line, prev-word would move it
  to the beginning of the previous line, not the end of the previous
  line as you would expect

+ API Changes
